--- a/src/components/App.css
+++ b/src/components/App.css
@@ -91,7 +91,7 @@ body {
   justify-content: center;
   min-height: 25vh;
   margin-top: 30px;
-
+  cursor: pointer;
   background-color: #3c6e71;
 }
 
